resize images before sending to the model to reduce vram usage